--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@
 
 release_hdr := $(shell sh -c './mkreleasehdr.sh')
 uname_S := $(shell sh -c 'uname -s 2>/dev/null || echo not')
-OPTIMIZATION?=-O2
+OPTIMIZATION=-O0
 DEPENDENCY_TARGETS=hiredis linenoise lua
 
 # Default settings
@@ -162,6 +162,7 @@ endif
 
 # redis-server
 $(REDIS_SERVER_NAME): $(REDIS_SERVER_OBJ)
+	@echo "FINAL_LIBS=> $(FINAL_LIBS)"
 	$(REDIS_LD) -o $@ $^ ../deps/hiredis/libhiredis.a ../deps/lua/src/liblua.a $(FINAL_LIBS)
 
 # redis-sentinel
